# coursera-ibm-ml

./: .gitignore  README.md  pyproject.toml
1-exploratory-data-analysis/: 01-reading-data.ipynb  02-reading_data.ipynb  03-cleaning-data.ipynb  04-exploratory-data-analysis.ipynb  05-gasoline-EDA.ipynb  06-feature-engineering.ipynb  07-airline-EDA.ipynb  08_hypothesis-testing.ipynb  09-hypothesis-testing.ipynb  notes.md
2-regression/: 01-linear-regression-intro.ipynb  02-linear-regression-lab.ipynb  03-data-splits-demo.ipynb  04-polynomial-regression-lab.ipynb  05-cross-validation-demo.ipynb  06_cross-validation-lab.ipynb  07-polynomial-and-regularisation.ipynb  08-regularisation-demo.ipynb  notes.md
3-classification/: 01_logistic_regression_demo.ipynb  02_logistic_regression_lab.ipynb  03_knn_demo.ipynb  04_knn_lab.ipynb  06_SVM_lab.ipynb  07_decision_trees_demo.ipynb  08_decision_trees_lab.ipynb  09_random_forest_lab.ipynb  10_bagging_demo.ipynb  11_bagging_lab.ipynb  12_boosting_stacking_demo.ipynb  13_adaboost_practice.ipynb  15_gradient_boosting_practice.ipynb  16_model_interpretability.ipynb  17_modeling_unbalanced_classes.ipynb
4-unsupervised-learning/: 10-dimensionality-reduction-1.ipynb  10-dimensionality-reduction.ipynb  11-principal-component-analysis.ipynb  13-multidimensional-scaling.ipynb  14-non-negative-matrix-factorization.ipynb  15-kernel-pca.ipynb  15-tf-idf.ipynb  16-non-negative-matrix-factorization.ipynb  2-k-means-clustering-lab.ipynb  3-mixture-of-gaussians-lab.ipynb  4-curse-of-dimensionality-lab.ipynb  5-distance-metrics-lab.ipynb  README.md  (+4 more)
(+6 files in other folders)
