[project]
name = "ibm-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "Florian-Heringa",email = "florian_music@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "notebook (>=7.5.0,<8.0.0)",
    "pandoc (>=2.4,<3.0)",
    "tdqm (>=0.0.1,<0.0.2)",
    "imblearn (>=0.0,<0.1)",
    "pydotplus (>=2.0.2,<3.0.0)",
    "xgboost (>=3.1.2,<4.0.0)",
    "lime (>=0.2.0.1,<0.3.0.0)",
    "imbalanced-learn (>=0.14.1,<0.15.0)",
    "eli5 (>=0.16.0,<0.17.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
